--- a/app/src/main/res/layout/nav_header_landing_page.xml
+++ b/app/src/main/res/layout/nav_header_landing_page.xml
@@ -25,14 +25,16 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/custom_title_fname"
+        android:textColor="@color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/display_email"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/custom_title_fname" />
+        android:text="@string/custom_title_fname"
+        android:textColor="@color/white" />
 
         //android:text="Name"
 
