--- a/app/src/main/res/menu/activity_landing_page_drawer.xml
+++ b/app/src/main/res/menu/activity_landing_page_drawer.xml
@@ -18,6 +18,10 @@
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_menu_manage"
             android:title="About" />
+        <item
+            android:id="@+id/nav_recommendation"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Recommendations" />
     </group>
 
     <group>
