--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -5,5 +5,8 @@
     <item name="ic_menu_manage" type="drawable">@android:drawable/ic_menu_manage</item>
     <item name="ic_menu_share" type="drawable">@android:drawable/ic_menu_share</item>
     <item name="ic_menu_send" type="drawable">@android:drawable/ic_menu_send</item>
+    <item name="ic_menu_recommend" type="drawable">@android:drawable/ic_menu_view</item>
+    <item name="ic_menu_history" type="drawable">@android:drawable/ic_menu_recent_history</item>
+
 
 </resources>
